add shortcodes for contracts, githubusers

--- a/docs/content/posts/2022-01-28.md
+++ b/docs/content/posts/2022-01-28.md
@@ -13,3 +13,10 @@ Also:
 Project Indigo updated commissions for the marketplaces and Bitcoin Monkeys dropped Bananas.
 
 See [all new contracts](https://github.com/boomcrypto/clarity-deployed-contracts/commit/f10378d9dd3aa7f17237754854d07f9ff2616249)
+
+
+
+Tweeted:
+
+{{< tweet "1487064639691182088" "friedger">}}
+
